--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,10 @@
     "name": "server",
     "version": "1.0.0",
     "main": "src/index.js",
+    "type": "module",
     "scripts": {
         "start": "node dist/index.js",
-        "dev": "nodemon src/index.ts"
+        "dev": "nodemon src/index.js"
     },
     "keywords": [],
     "author": "",
@@ -13,6 +14,7 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "express-async-handler": "^1.2.0",
