--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_dotenv: ^5.1.0
   http: ^1.2.1
+  camera: ^0.11.0+1
 
 dev_dependencies:
   flutter_test:
